CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
PROJECT(GameServer)
AUX_SOURCE_DIRECTORY(./main src)
AUX_SOURCE_DIRECTORY(./core src)
SET(CMAKE_BUILD_TYPE Debug)
SET(LIBS /home/linxing/Desktop/build/release/lib)
SET(HEADERS /home/linxing/Desktop/build/release-install/include)
include_directories(${HEADERS})
link_libraries(${LIBS}/libmuduo_base.a ${LIBS}/libmuduo_net.a)
ADD_EXECUTABLE(gg ${src})
TARGET_LINK_LIBRARIES(gg pthread)
